tests/paczka1/small_fuzzy/27565653.err
Error in line 2: S112 S583 54,3
Error in line 5: e2yT S926 66,5
